Remove the coding sections for the Workshop Exercise

--- a/views/home/dashboard.hbs
+++ b/views/home/dashboard.hbs
@@ -1,1 +1,10 @@
 <div>Welcome back, <strong>{{fullname}}</strong></div>
+
+<div style="margin: 5% auto;">
+    <!-- In Exercise 3, we will look at how to create our chart controls. -->
+</div>
+
+
+<script>
+    <!-- We will add the JavaScript coding here. -->
+</script>
