--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,9 +11,9 @@
         <title>{{title}}</title>
 
 		<!-- Importing Kendo UI related stylesheets -->
-		<link href="/stylesheets/kendo-ui/kendo.common-fiori.css" rel="stylesheet" />
-		<link href="/stylesheets/kendo-ui/kendo.fiori.min.css" rel="stylesheet" />
-		<link href="/stylesheets/kendo-ui/kendo.fiori.mobile.min.css" rel="stylesheet" />
+		<link href="/stylesheets/kendo-ui/kendo.common-material.min.css" rel="stylesheet" />
+		<link href="/stylesheets/kendo-ui/kendo.material.min.css" rel="stylesheet" />
+		<link href="/stylesheets/kendo-ui/kendo.material.mobile.min.css" rel="stylesheet" />
 		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
 		<link href="/stylesheets/main.css" rel="stylesheet" />
 
