--- a/views/event/dashboard.hbs
+++ b/views/event/dashboard.hbs
@@ -30,7 +30,7 @@
 				</select>
 			</div>
 
-			<div id="scheduler-wrapper"></div>
+			<!-- Here, we will add the scheduler control. -->
 		</div>
 		<div>
 			<h3>List of Events</h3>
@@ -39,20 +39,14 @@
 				<a id="add-event-btn" class="control-buttons form-btn k-primary" href="/events/create" type="button">Add Event</a>&nbsp;
 			</div>
 
-			<!-- We will add the Grid <div /> tag here. -->
+			<!-- This is where we will add our Grid control -->
 
-			<!-- We will declare our events details template here. -->
+			<!-- We will add the Events Details Template code here. -->
 		</div>
 	</div>
 </div>
 
-<script type="text/x-kendo-template" id="scheduler-event-template">
-	<div>
-		<p style="font-size: 14px; font-weight: bold; width: 100%; margin: 5px; text-wrap: normal;">#: title #</p>
-		<p style="font-size: 12px; width: 100%; padding: 5px;">#: eventType #</p>
-		<button onclick="editEvent('#: eventId#')" class="control-buttons edit-event-btn">Edit</button>
-	</div>
-</script>
+<!-- Here, we will add the Scheduler's Event Template -->
 
 <script>
 	function editEvent(id) {
@@ -67,125 +61,10 @@
 		}
 	});
 
-	// We will declare our Grid View here.
+	/* In the Grid exercise, you will add your coding here. */
 
-	var categories = [];
 
-	var defaultCategory = '';
-
-	var today = new Date();
-	var startTime = new Date(today.getFullYear(), today.getMonth(), today.getDate(), 7,0,0);
-	var endTime = new Date(today.getFullYear(), today.getMonth(), today.getDate(), 23,0,0);
-
-	$('#scheduler-wrapper').html('<div id="scheduler"></div>');
-
-	$.get('{{baseUri}}/api/eventcategories/get_list_selection', function(categories) {
-		defaultCategory = categories[0]._id;
-	});
-
-	$(document).ready(function() {
-		$('#eventCategories').kendoDropDownList({
-			index: 0,
-			dataTextField: "categoryName",
-			dataValueField: "_id",
-			dataSource: {
-				//type: "json", // specifies data protocol
-				transport: {
-					read: "{{baseUri}}/api/eventcategories/get_list_selection"
-				}
-			},
-			value: defaultCategory,
-			select: function (e) {
-
-				categories = [];
-
-				var scheduler = $('#scheduler').data('kendoScheduler');
-
-				scheduler.destroy();
-
-				$('#scheduler-wrapper').html('<div id="scheduler"></div>');
-
-				loadScheduler();
-			},
-			height: 250
-		});
-
-		loadScheduler();
-	});
-
-	function loadScheduler() {
-		$.get('{{baseUri}}/api/eventcategories/get_list_selection', function(data) {
-			data.forEach(function (category) {
-				categories.push({
-					text: category.categoryName,
-					value: category._id,
-					color: category.colorCode
-				});
-			});
-
-			$('#scheduler').kendoScheduler({
-				date: new Date(),
-				timezone: "GMT0",
-				startTime: startTime,
-				endTime: endTime,
-				height: 1000,
-				views: [
-					{ type: "day", showWorkHours: false },
-					{ type: "week", selected: true, showWorkHours: false },
-					"month",
-					"timeline"
-				],
-				editable: false,
-				eventTemplate: $('#scheduler-event-template').html(),
-				currentTimeMarker: {
-					updateInterval: 100
-				},
-				dataSource: {
-					batch: false, // Enable batch updates
-					transport: {
-						read: {
-							url: "{{baseUri}}/api/events/get_all_events"
-							//dataType: "json"
-						}
-					},
-					schema: {
-						model: {
-							id: "eventId", // The "id" of the event is the "taskId" field
-							fields: {
-								// Describe the scheduler event fields and map them to the fields returned by the remote service
-								eventId		: { from: "_id", type: "string" },
-								categoryId	: { from: "_eventCategory._id" },
-								title		: { from: "eventName", defaultValue: "No title", validation: { required: true } },
-								description	: { from: "eventDesc" },
-								start		: { type: "date", from: "startDate" },
-								end			: { type: "date", from: "endDate" },
-								startTime	: { type: "string", from: "startTime" },
-								endTime		: { type: "date", from: "endDate" },
-								timeSlotEnd	: { type: "string", from: "endTime" },
-								isAllDay	: { type: "boolean", from: "isAllDay" },
-								eventType	: { type: "string", from: "_eventType.typeName" },
-								typeId		: { from: "_eventType._id" },
-								statusId	: { from: "_eventStatus._id" },
-								venueId		: { from: "_eventVenue._id" },
-								colorCode	: { from: "_eventCategory.colorCode", type: "string" }
-							}
-						}
-					}
-				},
-				resources: [
-					{
-						field: "categoryId",
-						name: "Categories",
-						dataSource: categories,
-						title: "Category"
-					}
-				],
-				edit: function(e) {
-					e.preventDefault();
-				}
-			});
-		});
-	}
+	/* Exercise Two: We will learn how to create a Scheduler control and customizing its settings */
 
 	$('.control-buttons').kendoButton();
 </script>
